--- a/pom.xml
+++ b/pom.xml
@@ -80,9 +80,18 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <!--needed to compile tests because in java 9 the default path forJAXB APIs are considered
+        to be Java EE APIs, and therefore are no longer contained on the default class path in Java SE 9
+            link: https://stackoverflow.com/questions/43574426/how-to-resolve-java-lang-noclassdeffounderror-javax-xml-bind-jaxbexception-in-j-->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.2.11</version>
         </dependency>
     </dependencies>
 
@@ -94,6 +103,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
